Added many controllers and views for schaffolding

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <div class="header">
-  <a href="http://www.etsit.upm.es/" class="logo"></a>
+  <a href="/" class="logo"><img src="/assets/logo.png"></img></a>
   <a href="http://www.etsit.upm.es/">Escuela técnica Superior de Ingenieros de Telecomunicación</a>
   <div class="header-right"></div>
 </div>
