--- a/app/views/nominee_mailer/user_creation_email.html.erb
+++ b/app/views/nominee_mailer/user_creation_email.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to etsit.upm.es, <%= @nominee.email %></h1>
+    <h1>Welcome to eid4u.org, <%= @nominee.email %></h1>
     <p>
       To login create user on this website, just follow this link: <%= @nominee_url %>.
     </p>
