Added several new elements

--- a/app/views/nominee_mailer/user_creation_email.html.erb
+++ b/app/views/nominee_mailer/user_creation_email.html.erb
@@ -6,7 +6,7 @@
   <body>
     <h1>Welcome to eid4u.org, <%= @nominee.email %></h1>
     <p>
-      To login create user on this website, just follow this link: <%= @nominee_url %>.
+      To login create user on this website, just follow this link: <a href="<%= @nominee_url %>"><%= @nominee_url %></a>.
     </p>
     <p>Thanks for joining and have a great day!</p>
   </body>
