--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -1,3 +1,56 @@
 <h1> User Dashboard </h1>
+<div>
+	<div>
+		<%#= link_to student_application_form_path(current_user)%>
+	</div>
 
+	<div>
+		<div><%= label_tag :motivation_letter%></div>
+		<%unless current_user.motivation_letter.blank? %>
+			<%= link_to current_user.motivation_letter_file_name, current_user.motivation_letter.url%>
+			<td><%= button_to "Delete motivation letter", user_file_delete_url(:id => current_user.id, :attachment => :motivation_letter), :method=> :delete, form_class: "button" %></td>
+		<% else %>
+			<%= form_for current_user, url: user_file_upload_path, html: { multipart: true }, :method => :POST do |form| %>
+			  <%= form.file_field :motivation_letter %>
+			  <%= form.submit "Upload" %>
+			<% end %>
+		<%end%>
+	</div>
+	<div>
+		<div><%= label_tag :curriculum_vitae%></div>
+		<%unless current_user.curriculum_vitae.blank? %>
+			<%= link_to current_user.curriculum_vitae_file_name, current_user.curriculum_vitae.url%>
+			<td><%= button_to "Delete CV", user_file_delete_url(:id => current_user.id, :attachment => :curriculum_vitae), :method=> :delete, form_class: "button" %></td>
+		<% else %>
+			<%= form_for current_user, url: user_file_upload_path, html: { multipart: true }, :method => :POST do |form| %>
+			  <%= form.file_field :curriculum_vitae %>
+			  <%= form.submit "Upload" %>
+			<% end %>
+		<% end %>
+	</div>
+	<div>
+		<div><%= label_tag :transcript_of_records%></div>
+		<%unless current_user.transcript_of_records.blank? %>
+			<%= link_to current_user.transcript_of_records_file_name, current_user.transcript_of_records.url%>
+			<td><%= button_to "Delete transcript of records", user_file_delete_url(:id => current_user.id, :attachment => :transcript_of_records), :method=> :delete, form_class: "button" %></td>
+		<% else %>
+			<%= form_for current_user, url: user_file_upload_path, html: { multipart: true }, :method => :POST do |form| %>
+			  <%= form.file_field :transcript_of_records %>
+			  <%= form.submit "Upload" %>
+			<% end %>
+		<% end %>
+	</div>
+	<div>
+		<div><%= label_tag :learning_agreement%></div>
+		<%unless current_user.learning_agreement.blank? %>
+			<%= link_to current_user.learning_agreement_file_name, current_user.learning_agreement.url%>
+			<td><%= button_to "Delete learning agreement", user_file_delete_url(:id => current_user.id, :attachment => :learning_agreement), :method=> :delete, form_class: "button" %></td>
+		<% else %>
+			<%= form_for current_user, url: user_file_upload_path, html: { multipart: true }, :method => :POST do |form| %>
+			  <%= form.file_field :learning_agreement %>
+			  <%= form.submit "Upload" %>
+			<% end %>
+		<% end %>
+	</div>
+</div>
 <%= button_to "Log out", destroy_user_session_path, :method=> :delete, form_class: "button"%>
