Added several improvements and now student application form has all vies

--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -1,7 +1,8 @@
 <h1> User Dashboard </h1>
 <div>
 	<div>
-		<%#= link_to student_application_form_path(current_user)%>
+		<div><%= label_tag :student_application_form%></div>
+		<%= link_to "Student Application Form", student_application_form_path%>
 	</div>
 
 	<div>
