--- a/app/views/student_application_form/_third_step.erb
+++ b/app/views/student_application_form/_third_step.erb
@@ -19,10 +19,10 @@
   <%= f.select :programme, [
     'Eramus+ Studies',
     'Eramus+ Placement',
-    'Maejablades',
+    'Magalhães',
     'Bilateral Agreement',
-    'Utility Student',
-    'SICUERT',
+    'Visiting Student',
+    'SICUE/SENECA',
     ] %>
 </div>
 
