--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -1,7 +1,39 @@
+*
+	font-family: 'Source Sans Pro', sans-serif
+
+
 .container
-	display: block
-	margin-left: 5%
-	margin-right: 5%
+	padding-right: 15px
+	padding-left: 15px
+	margin-right: auto
+	margin-left: auto
+@media (min-width: 768px)
+	.container
+		width: 750px
+
+@media (min-width: 992px)
+	.container
+		width: 970px
+
+@media (min-width: 1200px)
+	.container
+		width: 1170px
+
+
 
 .button
 	float: left
+
+body
+	padding: 0
+	margin: 0
+
+	.title
+		color: #4664A2
+		font-size: 24px
+		margin-top: 20px
+		margin-bottom: 10px
+		font-family: inherit
+		font-weight: 500
+		line-height: 1.1
+		color: inherit
