--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,14 @@
-<div class="header">
-  <a href="/" class="logo"><img src="/assets/logo.png"></img></a>
-  <a href="http://www.etsit.upm.es/">Escuela técnica Superior de Ingenieros de Telecomunicación</a>
-  <div class="header-right"></div>
-</div>
+<nav class="navbar-etsit">
+    <div class="container">
+        <div id="navlogos">
+          <a class="navbar-brand" href="http://www.upm.es"><img src="/assets/LOGO-UPM-WT.gif"></a>
+          <a class="navbar-brand" href="http://www.etsit.upm.es"><img src="/assets//LOGO_ETSIT_WT.gif"></a>
+        </div>
+        <div class="header">
+          <a href="http://www.etsit.upm.es/"><h3 class="navbar-header etsit-header">Escuela Técnica Superior de Ingenieros de Telecomunicación</h3></a>
+          <a href="http://www.upm.es/"><h4 class="navbar-header upm-header">Universidad Politécnica de Madrid</h3></a>
+          <div class="header-right"></div>
+        </div>
+    </div>
+</nav>
+
