Buttons and progress bar

--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -5,3 +5,12 @@
 
 .button
 	float: left
+
+.custom-button
+	border-radius: 5px
+	color: #4664A2
+	background-color: white
+	outline: none
+	border: 2px solid #4664A2	 
+	padding: 5px 10px
+	cursor: pointer
