--- a/app/views/student_application_form/_first_step.html.erb
+++ b/app/views/student_application_form/_first_step.html.erb
@@ -39,6 +39,6 @@
     <%= f.text_field :inst_email, autofocus: true, autocomplete: "inst_telephone" %>
   </div>
 
-<%= f.submit "Save current page" %>
+<%= f.submit "Save current page", label: false, :class => "custom-button" %>
 
 <%end%>
