--- a/app/views/student_application_form/_second_step.erb
+++ b/app/views/student_application_form/_second_step.erb
@@ -17,6 +17,6 @@
     <%= f.text_field :graduate_courses, autofocus: true, autocomplete: "graduate_courses" %>
   </div>
 
-<%= f.submit "Save current page" %>
+<%= f.submit "Save current page", label: false, :class => "custom-button" %>
 
 <%end%>
