--- a/app/views/student_application_form/_sixth_step.erb
+++ b/app/views/student_application_form/_sixth_step.erb
@@ -30,6 +30,6 @@
     <%= f.text_field :where_institution_abroad, autofocus: true, autocomplete: "where_institution_abroad" %>
   </div>
 
-<%= f.submit "Save current page" %>
+<%= f.submit "Save current page", label: false, :class => "custom-button" %>
 
 <%end%>
