--- a/app/views/student_application_form/_forth_step.erb
+++ b/app/views/student_application_form/_forth_step.erb
@@ -15,6 +15,6 @@
 
   <h2>Other languages</h2>
 
-<%= f.submit "Save current page" %>
+<%= f.submit "Save current page", label: false, :class => "custom-button" %>
 
 <%end%>
