--- a/app/views/student_application_form/_third_step.erb
+++ b/app/views/student_application_form/_third_step.erb
@@ -31,6 +31,6 @@
   <%= f.text_field :field_of_study, autofocus: true, autocomplete: "field_of_study", :value => "Telecommunication Engineering" %>
 </div>
 
-<%= f.submit "Save current page" %>
+<%= f.submit "Save current page", label: false, :class => "custom-button" %>
 
 <%end%>
