Add SASS variables file

--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -1,3 +1,5 @@
+@import "_variables"
+
 .container
 	display: block
 	margin-left: 5%
@@ -11,6 +13,6 @@
 	color: #4664A2
 	background-color: white
 	outline: none
-	border: 2px solid #4664A2	 
+	border: 2px solid $etsit_blue
 	padding: 5px 10px
 	cursor: pointer
