--- a/app/assets/stylesheets/progress.sass
+++ b/app/assets/stylesheets/progress.sass
@@ -1,17 +1,19 @@
+@import "_variables"
+
 .progress-bar
 	position: relative
 	display: inline-block
 	.progress-line
-		// border-bottom: 2px solid #4664A2
+		// border-bottom: 2px solid $etsit_blue
 		height: 2px
 		position: absolute
-		background-color: #4664A2
+		background-color: $etsit_blue
 		top: 50%
 		width: 100%
 		z-index: -1
 	.progress-ball
 		border: 1px solid white
-		background-color: #4664A2
+		background-color: $etsit_blue
 		border-radius: 50%
 		width: 10px
 		vertical-align: middle
@@ -23,5 +25,5 @@
 			width: 7px
 		&.future-step
 			background-color: white
-			border-color: #4664A2
+			border-color: $etsit_blue
 
