--- a/app/views/users/user_dashboard.html.erb
+++ b/app/views/users/user_dashboard.html.erb
@@ -1,12 +1,12 @@
 <h1> User Dashboard </h1>
 <div>
 	<div>
-		<div><%= label_tag :student_application_form%></div>
+		<div><%= label_tag :student_application_form %></div>
 		<%= link_to "Student Application Form", student_application_form_path%>
 	</div>
 
 	<div>
-		<div><%= label_tag :motivation_letter%></div>
+		<div><%= label_tag :motivation_letter %></div>
 		<%unless current_user.motivation_letter.blank? %>
 			<%= link_to current_user.motivation_letter_file_name, current_user.motivation_letter.url%>
 			<td><%= button_to "Delete motivation letter", user_file_delete_url(:id => current_user.id, :attachment => :motivation_letter), :method=> :delete, form_class: "button" %></td>
@@ -18,7 +18,7 @@
 		<%end%>
 	</div>
 	<div>
-		<div><%= label_tag :curriculum_vitae%></div>
+		<div><%= label_tag :curriculum_vitae %></div>
 		<%unless current_user.curriculum_vitae.blank? %>
 			<%= link_to current_user.curriculum_vitae_file_name, current_user.curriculum_vitae.url%>
 			<td><%= button_to "Delete CV", user_file_delete_url(:id => current_user.id, :attachment => :curriculum_vitae), :method=> :delete, form_class: "button" %></td>
@@ -30,7 +30,7 @@
 		<% end %>
 	</div>
 	<div>
-		<div><%= label_tag :transcript_of_records%></div>
+		<div><%= label_tag :transcript_of_records %></div>
 		<%unless current_user.transcript_of_records.blank? %>
 			<%= link_to current_user.transcript_of_records_file_name, current_user.transcript_of_records.url%>
 			<td><%= button_to "Delete transcript of records", user_file_delete_url(:id => current_user.id, :attachment => :transcript_of_records), :method=> :delete, form_class: "button" %></td>
@@ -42,7 +42,7 @@
 		<% end %>
 	</div>
 	<div>
-		<div><%= label_tag :learning_agreement%></div>
+		<div><%= label_tag :learning_agreement %></div>
 		<%unless current_user.learning_agreement.blank? %>
 			<%= link_to current_user.learning_agreement_file_name, current_user.learning_agreement.url%>
 			<td><%= button_to "Delete learning agreement", user_file_delete_url(:id => current_user.id, :attachment => :learning_agreement), :method=> :delete, form_class: "button" %></td>
@@ -53,5 +53,80 @@
 			<% end %>
 		<% end %>
 	</div>
+	<div>
+		<div><%= label_tag :valid_insurance_policy %></div>
+		<%unless current_user.valid_insurance_policy.blank? %>
+			<%= link_to current_user.valid_insurance_policy_file_name, current_user.valid_insurance_policy.url%>
+			<td><%= button_to "Delete learning agreement", user_file_delete_url(:id => current_user.id, :attachment => :valid_insurance_policy), :method=> :delete, form_class: "button" %></td>
+		<% else %>
+			<%= form_for current_user, url: user_file_upload_path, html: { multipart: true }, :method => :POST do |form| %>
+			  <%= form.file_field :valid_insurance_policy %>
+			  <%= form.submit "Upload" %>
+			<% end %>
+		<% end %>
+	</div>
+	<div>
+		<div><%= label_tag :ni_passport %></div>
+		<%unless current_user.ni_passport.blank? %>
+			<%= link_to current_user.ni_passport_file_name, current_user.ni_passport.url%>
+			<td><%= button_to "Delete learning agreement", user_file_delete_url(:id => current_user.id, :attachment => :ni_passport), :method=> :delete, form_class: "button" %></td>
+		<% else %>
+			<%= form_for current_user, url: user_file_upload_path, html: { multipart: true }, :method => :POST do |form| %>
+			  <%= form.file_field :ni_passport %>
+			  <%= form.submit "Upload" %>
+			<% end %>
+		<% end %>
+	</div>
+
+	<div>Seeking degree <input type="checkbox"/></div>
+	<div>
+		<div><%= label_tag :recommendation_letter_1 %></div>
+		<%unless current_user.recommendation_letter_1.blank? %>
+			<%= link_to current_user.recommendation_letter_1_file_name, current_user.recommendation_letter_1.url%>
+			<td><%= button_to "Delete learning agreement", user_file_delete_url(:id => current_user.id, :attachment => :recommendation_letter_1), :method=> :delete, form_class: "button" %></td>
+		<% else %>
+			<%= form_for current_user, url: user_file_upload_path, html: { multipart: true }, :method => :POST do |form| %>
+			  <%= form.file_field :recommendation_letter_1 %>
+			  <%= form.submit "Upload" %>
+			<% end %>
+		<% end %>
+	</div>
+	<div>
+		<div><%= label_tag :recommendation_letter_2 %></div>
+		<%unless current_user.recommendation_letter_2.blank? %>
+			<%= link_to current_user.recommendation_letter_2_file_name, current_user.recommendation_letter_2.url%>
+			<td><%= button_to "Delete learning agreement", user_file_delete_url(:id => current_user.id, :attachment => :recommendation_letter_2), :method=> :delete, form_class: "button" %></td>
+		<% else %>
+			<%= form_for current_user, url: user_file_upload_path, html: { multipart: true }, :method => :POST do |form| %>
+			  <%= form.file_field :recommendation_letter_2 %>
+			  <%= form.submit "Upload" %>
+			<% end %>
+		<% end %>
+	</div>
+	<div>
+		<div><%= label_tag :official_gpa %></div>
+		<%unless current_user.official_gpa.blank? %>
+			<%= link_to current_user.official_gpa_file_name, current_user.official_gpa.url%>
+			<td><%= button_to "Delete learning agreement", user_file_delete_url(:id => current_user.id, :attachment => :official_gpa), :method=> :delete, form_class: "button" %></td>
+		<% else %>
+			<%= form_for current_user, url: user_file_upload_path, html: { multipart: true }, :method => :POST do |form| %>
+			  <%= form.file_field :official_gpa %>
+			  <%= form.submit "Upload" %>
+			<% end %>
+		<% end %>
+	</div>
+	<div>
+		<div><%= label_tag :english_test_score %></div>
+		<%unless current_user.english_test_score.blank? %>
+			<%= link_to current_user.english_test_score_file_name, current_user.english_test_score.url%>
+			<td><%= button_to "Delete learning agreement", user_file_delete_url(:id => current_user.id, :attachment => :english_test_score), :method=> :delete, form_class: "button" %></td>
+		<% else %>
+			<%= form_for current_user, url: user_file_upload_path, html: { multipart: true }, :method => :POST do |form| %>
+			  <%= form.file_field :english_test_score %>
+			  <%= form.submit "Upload" %>
+			<% end %>
+		<% end %>
+	</div>
+
 </div>
 <%= button_to "Log out", destroy_user_session_path, :method=> :delete, form_class: "button"%>
